Convert Portal to use @use instead of @import

--- a/alcs-frontend/src/app/features/application/post-decision/edit-modification-dialog/edit-modification-dialog.component.scss
+++ b/alcs-frontend/src/app/features/application/post-decision/edit-modification-dialog/edit-modification-dialog.component.scss
@@ -25,7 +25,7 @@ label {
 .warning {
   padding: 16px;
   font-size: 16px;
-  background-color: rgba($secondary-color, 0.2);
+  background-color: rgba(colors.$secondary-color, 0.2);
   border-radius: 8px;
   display: flex;
   align-items: center;
