--- a/portal-frontend/src/app/features/edit-application/other-parcels/other-parcels.component.scss
+++ b/portal-frontend/src/app/features/edit-application/other-parcels/other-parcels.component.scss
@@ -1,5 +1,4 @@
-@import '../../../../styles/typography';
-@import '../../../../styles/colors';
+@use '../../../../styles/functions' as *;
 
 p {
   margin: rem(16) 0 !important;
