--- a/portal-frontend/src/app/shared/confirmation-dialog/confirmation-dialog.component.scss
+++ b/portal-frontend/src/app/shared/confirmation-dialog/confirmation-dialog.component.scss
@@ -1,5 +1,4 @@
-@import '../../../styles/functions';
-@import '../../../styles/typography';
+@use '../../../styles/functions' as *;
 
 .mat-dialog-actions {
   justify-content: flex-end;
