--- a/portal-frontend/src/app/shared/header/header.component.scss
+++ b/portal-frontend/src/app/shared/header/header.component.scss
@@ -1,5 +1,4 @@
-@import '../../../styles/functions.scss';
-@import '../../../styles/typography.scss';
+@use '../../../styles/functions' as *;
 
 header {
   .title-wrapper {
