--- a/portal-frontend/src/app/shared/validation-error/validation-error.component.scss
+++ b/portal-frontend/src/app/shared/validation-error/validation-error.component.scss
@@ -1,9 +1,9 @@
-@import '../../../styles/colors';
-@import '../../../styles/typography';
+@use '../../../styles/functions' as *;
+@use '../../../styles/colors';
 
 .error {
   margin-top: rem(4);
-  color: $error-color;
+  color: colors.$error-color;
   display: flex;
   align-items: center;
 
