--- a/portal-frontend/src/app/app.component.scss
+++ b/portal-frontend/src/app/app.component.scss
@@ -1,5 +1,5 @@
-@import '../styles/functions.scss';
-@import '../styles/typography.scss';
+@use '../styles/functions.scss' as *;
+@use '../styles/typography.scss';
 
 :host {
   width: 100%;
