--- a/portal-frontend/src/app/features/application-details/application-details.component.scss
+++ b/portal-frontend/src/app/features/application-details/application-details.component.scss
@@ -1,6 +1,5 @@
-@import '../../../styles/functions.scss';
-@import '../../../styles/colors.scss';
-@import '../../../styles/typography.scss';
+@use '../../../styles/functions' as *;
+@use '../../../styles/colors';
 
 :host::ng-deep {
   .view-grid-item {
@@ -29,7 +28,7 @@
 
   .no-data-text {
     text-align: center;
-    color: $grey;
+    color: colors.$grey;
 
     .error {
       justify-content: center;
@@ -85,7 +84,7 @@
   .review-table {
     padding: rem(8);
     margin: rem(12) 0 rem(20) 0;
-    background-color: $grey-light;
+    background-color: colors.$grey-light;
     display: grid;
     grid-row-gap: rem(24);
     grid-column-gap: rem(16);
