--- a/portal-frontend/src/app/features/edit-application/change-application-type-dialog/change-application-type-dialog.component.scss
+++ b/portal-frontend/src/app/features/edit-application/change-application-type-dialog/change-application-type-dialog.component.scss
@@ -1,6 +1,5 @@
-@import '../../../../styles/colors';
-@import '../../../../styles/functions';
-@import '../../../../styles/typography';
+@use '../../../../styles/functions' as *;
+@use '../../../../styles/colors';
 
 .margin-bottom-1 {
   margin-bottom: rem(16);
@@ -9,7 +8,7 @@
 .change-app-type-modal {
   .warning-banner {
     margin-top: rem(8);
-    background-color: rgba($accent-color-light, 0.5);
+    background-color: rgba(colors.$accent-color-light, 0.5);
     padding: rem(16);
 
     .read-more-btn {
@@ -17,7 +16,7 @@
       cursor: pointer;
       display: flex;
       justify-content: flex-end;
-      color: $accent-color-dark;
+      color: colors.$accent-color-dark;
     }
 
     .display-none {
