--- a/portal-frontend/src/app/features/edit-application/parcel-details/application-crown-owner-dialog/application-crown-owner-dialog.component.scss
+++ b/portal-frontend/src/app/features/edit-application/parcel-details/application-crown-owner-dialog/application-crown-owner-dialog.component.scss
@@ -1,4 +1,5 @@
-@import '../../../../../styles/typography';
+@use '../../../../../styles/functions' as *;
+@use '../../../../../styles/colors';
 
 .actions {
   button:not(:last-child) {
@@ -7,7 +8,7 @@
 }
 
 .field-error {
-  color: $error-color;
+  color: colors.$error-color;
   font-size: rem(15);
   font-weight: 700;
   display: flex;
