--- a/portal-frontend/src/app/features/home/application-list/application-list.component.scss
+++ b/portal-frontend/src/app/features/home/application-list/application-list.component.scss
@@ -1,5 +1,5 @@
-@import '../../../../styles/colors';
-@import '../../../../styles/functions';
+@use '../../../../styles/functions' as *;
+@use '../../../../styles/colors';
 
 .label {
   display: inline-block;
@@ -10,26 +10,26 @@
 
 .incomplete,
 .wrong-government {
-  background-color: $accent-color-light;
-  color: $accent-color-dark;
+  background-color: colors.$accent-color-light;
+  color: colors.$accent-color-dark;
 }
 
 .submitted-to-alc,
 .submitted-to-lg {
-  background-color: $primary-color-light;
-  color: $primary-color-dark;
+  background-color: colors.$primary-color-light;
+  color: colors.$primary-color-dark;
 }
 
 .in-progress,
 .in-review {
-  background-color: $secondary-color-light;
-  color: $secondary-color-dark;
+  background-color: colors.$secondary-color-light;
+  color: colors.$secondary-color-dark;
 }
 
 .cancelled,
 .refused-to-forward {
-  background-color: $grey-light;
-  color: $grey-dark;
+  background-color: colors.$grey-light;
+  color: colors.$grey-dark;
 }
 
 .table-wrapper {
