--- a/portal-frontend/src/app/features/landing-page/landing-page.component.scss
+++ b/portal-frontend/src/app/features/landing-page/landing-page.component.scss
@@ -1,8 +1,8 @@
-@import '../../../styles/colors.scss';
-@import '../../../styles/functions.scss';
+@use '../../../styles/functions' as *;
+@use '../../../styles/colors';
 
 .color-accent-dark {
-  color: $accent-color-dark;
+  color: colors.$accent-color-dark;
 }
 
 ul {
@@ -19,7 +19,7 @@ ul {
     font-family: 'Material Icons';
     position: absolute;
     left: rem(-36);
-    color: $accent-color;
+    color: colors.$accent-color;
   }
 }
 
