--- a/portal-frontend/src/app/features/review-application/review-application.component.scss
+++ b/portal-frontend/src/app/features/review-application/review-application.component.scss
@@ -1,4 +1,5 @@
-@import '../../../styles/typography';
+@use '../../../styles/functions' as *;
+@use '../../../styles/colors';
 
 .header {
   margin: rem(24) 0;
@@ -22,7 +23,7 @@
 
 :host::ng-deep {
   .field-error {
-    color: $error-color;
+    color: colors.$error-color;
     font-size: rem(15);
     font-weight: 700;
     display: flex;
@@ -90,7 +91,7 @@
   }
 
   .mat-button-toggle-checked.mat-button-toggle-appearance-standard {
-    background-color: $primary-color-light;
+    background-color: colors.$primary-color-light;
   }
 
   .review-application {
