--- a/portal-frontend/src/app/features/review-application/review-submit-fng/review-submit-fng.component.scss
+++ b/portal-frontend/src/app/features/review-application/review-submit-fng/review-submit-fng.component.scss
@@ -1,6 +1,5 @@
-@import '../../../../styles/functions';
-@import '../../../../styles/colors';
-@import '../../../../styles/typography';
+@use '../../../../styles/functions' as *;
+@use '../../../../styles/colors';
 
 section {
   margin-bottom: rem(24);
@@ -11,7 +10,7 @@ section {
 }
 
 .link {
-  color: $link-color;
+  color: colors.$link-color;
   cursor: pointer;
 }
 
@@ -25,18 +24,18 @@ section {
   }
 
   .mat-expansion-panel.mat-expanded {
-    background-color: $grey-light;
-    border: 1px solid $black;
+    background-color: colors.$grey-light;
+    border: 1px solid colors.$black;
   }
 
   .mat-expansion-panel-header {
-    border: 1px solid $black;
+    border: 1px solid colors.$black;
   }
 
   .mat-expansion-panel-header.mat-expanded,
   .mat-expansion-panel-header.mat-expanded:focus,
   .mat-expansion-panel-header.mat-expanded:hover {
-    background-color: $grey-light;
+    background-color: colors.$grey-light;
     border-top: none;
     border-left: none;
     border-right: none;
@@ -46,7 +45,7 @@ section {
 
 .review-table {
   margin: rem(12) 0 rem(20) 0;
-  background-color: $grey-light;
+  background-color: colors.$grey-light;
   display: grid;
   grid-row-gap: rem(32);
   grid-template-columns: 1fr;
