--- a/portal-frontend/src/app/features/view-application/view-application.component.scss
+++ b/portal-frontend/src/app/features/view-application/view-application.component.scss
@@ -1,7 +1,6 @@
-@import '../../../styles/functions';
-@import '../../../styles/colors';
-@import '../../../styles/typography';
-@import '../../../styles/navigation-wrapper';
+@use '../../../styles/functions' as *;
+@use '../../../styles/colors';
+@use '../../../styles/navigation-wrapper';
 
 .content {
   margin: rem(24) 0;
@@ -14,7 +13,7 @@
 }
 
 .banner {
-  background-color: $secondary-color;
+  background-color: colors.$secondary-color;
   width: 100%;
   color: #fff;
   padding: rem(16) rem(24);
@@ -68,7 +67,7 @@
 }
 
 .warning {
-  background-color: rgba($accent-color-light, 0.5);
+  background-color: rgba(colors.$accent-color-light, 0.5);
   padding: 16px;
 }
 
@@ -78,7 +77,7 @@
   left: 0;
   right: 0;
   width: 100%;
-  background-color: $primary-color-light;
+  background-color: colors.$primary-color-light;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -111,7 +110,7 @@
 }
 
 .no-comment {
-  color: $grey-dark;
+  color: colors.$grey-dark;
   font-style: italic;
 }
 
@@ -129,7 +128,7 @@ section {
 }
 
 .link {
-  color: $link-color;
+  color: colors.$link-color;
   cursor: pointer;
 }
 
@@ -143,18 +142,18 @@ section {
   }
 
   .mat-expansion-panel.mat-expanded {
-    background-color: $grey-light;
-    border: 1px solid $black;
+    background-color: colors.$grey-light;
+    border: 1px solid colors.$black;
   }
 
   .mat-expansion-panel-header {
-    border: 1px solid $black;
+    border: 1px solid colors.$black;
   }
 
   .mat-expansion-panel-header.mat-expanded,
   .mat-expansion-panel-header.mat-expanded:focus,
   .mat-expansion-panel-header.mat-expanded:hover {
-    background-color: $grey-light;
+    background-color: colors.$grey-light;
     border-top: none;
     border-left: none;
     border-right: none;
@@ -164,7 +163,7 @@ section {
 
 .review-table {
   margin: rem(12) 0 rem(20) 0;
-  background-color: $grey-light;
+  background-color: colors.$grey-light;
   display: grid;
   grid-row-gap: rem(32);
   grid-template-columns: 1fr;
