--- a/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.scss
+++ b/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.scss
@@ -1,12 +1,12 @@
-@import '../../../styles/colors';
-@import '../../../styles/typography';
+@use '../../../styles/functions' as *;
+@use '../../../styles/colors';
 
 .file-input {
   display: none;
 }
 
 .desktop-file-drag-drop {
-  border: 0.2rem dashed rgba($grey-dark, 0.5);
+  border: 0.2rem dashed rgba(colors.$grey-dark, 0.5);
   border-radius: 0.4rem;
   width: 100%;
   display: none;
@@ -21,7 +21,7 @@
 }
 
 a {
-  color: $link-color;
+  color: colors.$link-color;
   text-decoration: underline;
   cursor: pointer;
 }
@@ -29,11 +29,11 @@ a {
 .icon {
   font-size: 8rem;
   line-height: 8rem;
-  color: $grey-dark;
+  color: colors.$grey-dark;
 }
 
 .drag-text {
-  color: $grey-dark;
+  color: colors.$grey-dark;
   font-size: 1.6rem;
   font-weight: bold;
   margin-top: 1rem;
@@ -47,7 +47,7 @@ a {
 }
 
 .uploaded-file {
-  border: 1px solid $black;
+  border: 1px solid colors.$black;
   border-radius: rem(4);
   padding: rem(8);
   display: flex;
@@ -56,7 +56,7 @@ a {
   margin-bottom: rem(8);
 
   &.error {
-    border: 2px solid $error-color;
+    border: 2px solid colors.$error-color;
   }
 
   .file-name {
@@ -71,7 +71,7 @@ a {
 }
 
 .error-message {
-  color: $error-color;
+  color: colors.$error-color;
   display: flex;
   margin-bottom: rem(16);
 
