Fix CSS, Update Readmes

--- a/alcs-frontend/src/app/shared/meeting-overview/meeting-overview.component.html
+++ b/alcs-frontend/src/app/shared/meeting-overview/meeting-overview.component.html
@@ -40,7 +40,7 @@
           <mat-icon>event</mat-icon>
           {{ boardMeeting.nextMeeting!.meetingDate | momentFormat: customDateFormat }}
         </div>
-        <span class="main-panel-no-meetings center" *ngIf="!boardMeeting.nextMeeting?.meetingDate">None Scheduled</span>
+        <h4 class="main-panel-no-meetings center" *ngIf="!boardMeeting.nextMeeting?.meetingDate">None Scheduled</h4>
       </mat-panel-description>
     </mat-expansion-panel-header>
     <div class="meetings-container">
