fix links and create button

--- a/portal-frontend/src/app/features/edit-application/nfu/nfu-proposal/nfu-proposal.component.html
+++ b/portal-frontend/src/app/features/edit-application/nfu/nfu-proposal/nfu-proposal.component.html
@@ -8,7 +8,7 @@
 </div>
 <app-warning-banner>
   Please consult the '
-  <a href="https://www.alc.gov.bc.ca/application-and-notice-process/applications/what-the-commission-considers/">
+  <a href="https://www.alc.gov.bc.ca/application-and-notice-process/applications/what-the-commission-considers/" target="_blank">
     What the Commission Considers
   </a>
   ' page of the ALC website for more information.
