--- a/portal-frontend/src/app/features/edit-application/tur/tur-proposal/tur-proposal.component.html
+++ b/portal-frontend/src/app/features/edit-application/tur/tur-proposal/tur-proposal.component.html
@@ -10,12 +10,15 @@
   In order to complete this step, please consult the following pages on the ALC website:
   <ul>
     <li>
-      <a href="https://www.alc.gov.bc.ca/application-and-notice-process/applications/what-the-commission-considers/">
+      <a
+        href="https://www.alc.gov.bc.ca/application-and-notice-process/applications/what-the-commission-considers/"
+        target="_blank"
+      >
         What the Commission Considers
       </a>
     </li>
     <li>
-      <a href="TODO">FIX THIS ELEPHANT: Transportation, Utility and Recreational Trail</a>
+      <a href="TODO" target="_blank">FIX THIS ELEPHANT: Transportation, Utility and Recreational Trail</a>
     </li>
   </ul>
 </app-warning-banner>
