--- a/portal-frontend/src/app/features/home/home.component.html
+++ b/portal-frontend/src/app/features/home/home.component.html
@@ -2,7 +2,9 @@
   <div class="header-row">
     <diV class="title">
       <h3>Portal Inbox</h3>
-      <button class="btn" (click)="onCreateApplication()" color="accent" mat-flat-button>+ Create New</button>
+      <div>
+        <button mat-flat-button class="btn" (click)="onCreateApplication()" color="accent">+ Create New</button>
+      </div>
     </diV>
     <p>Create and manage your Applications, Notice of Intent, and Notification of SRW.</p>
     <div class="learn-more-wrapper">
