Re-hook up Application Documents
* Create application as soon as submission is created

--- a/portal-frontend/src/app/features/edit-application/edit-application.component.html
+++ b/portal-frontend/src/app/features/edit-application/edit-application.component.html
@@ -79,6 +79,7 @@
       <app-tur-proposal
         *ngIf="application.typeCode === 'TURP'"
         [$application]="$application"
+        [$applicationDocuments]="$applicationDocuments"
         [showErrors]="showValidationErrors"
         (navigateToStep)="onBeforeSwitchStep($event)"
       ></app-tur-proposal>
@@ -89,6 +90,7 @@
     <div *ngIf="cdkStepper.selectedIndex === editAppSteps.Attachments">
       <app-other-attachments
         [$application]="$application"
+        [$applicationDocuments]="$applicationDocuments"
         [showErrors]="showValidationErrors"
         (navigateToStep)="onBeforeSwitchStep($event)"
       ></app-other-attachments>
@@ -97,7 +99,10 @@
   <cdk-step label="Review & Submit">
     <ng-container *ngTemplateOutlet="header"></ng-container>
     <div *ngIf="cdkStepper.selectedIndex === editAppSteps.ReviewAndSubmit">
-      <app-review-and-submit [$application]="$application"></app-review-and-submit>
+      <app-review-and-submit
+        [$application]="$application"
+        [$applicationDocuments]="$applicationDocuments"
+      ></app-review-and-submit>
     </div>
   </cdk-step>
 </app-custom-stepper>
