--- a/portal-frontend/src/app/features/edit-application/review-and-submit/review-and-submit.component.html
+++ b/portal-frontend/src/app/features/edit-application/review-and-submit/review-and-submit.component.html
@@ -1,5 +1,5 @@
 <section>
-  <app-application-details [$application]="$application"></app-application-details>
+  <app-application-details [$application]="$application" [$applicationDocuments]='$applicationDocuments'></app-application-details>
   <div class="button-container">
     <button (click)="onSaveExit()" mat-stroked-button color="accent">Save and Exit</button>
     <div>
