--- a/portal-frontend/src/app/features/view-application/view-application.component.html
+++ b/portal-frontend/src/app/features/view-application/view-application.component.html
@@ -63,6 +63,7 @@
               [showEdit]="false"
               [showErrors]="false"
               [$application]="$application"
+              [$applicationDocuments]='$applicationDocuments'
             ></app-application-details>
           </section>
         </div>
