fix tur proposal docs

--- a/portal-frontend/src/app/features/application-details/application-details.component.html
+++ b/portal-frontend/src/app/features/application-details/application-details.component.html
@@ -181,6 +181,7 @@
     [showErrors]="showErrors"
     [showEdit]="showEdit"
     [application]="application"
+    [applicationDocuments]="appDocuments"
   ></app-tur-details>
 </section>
 <section>
