Only show not subject banner for TURP applications

--- a/alcs-frontend/src/app/features/application/lfng-info/lfng-info.component.html
+++ b/alcs-frontend/src/app/features/application/lfng-info/lfng-info.component.html
@@ -1,6 +1,6 @@
 <h3>L/FNG Info</h3>
 <section>
-  <div *ngIf="!applicationReview" class="warning">
+  <div *ngIf="!requiresReview" class="warning">
     Application not subjected to Local/First Nation Government Review.
   </div>
   <ng-container *ngIf="applicationReview">
