--- a/portal-frontend/src/app/features/edit-application/edit-application.component.html
+++ b/portal-frontend/src/app/features/edit-application/edit-application.component.html
@@ -43,6 +43,7 @@
       <app-primary-contact
         [showErrors]="showValidationErrors"
         [$application]="$application"
+        [$applicationDocuments]="$applicationDocuments"
         (navigateToStep)="onBeforeSwitchStep($event)"
       ></app-primary-contact>
     </div>
