Fix update to return mapped app
Was returning null

--- a/portal-frontend/src/app/features/edit-application/change-application-type-dialog/change-application-type-dialog.component.scss
+++ b/portal-frontend/src/app/features/edit-application/change-application-type-dialog/change-application-type-dialog.component.scss
@@ -5,6 +5,10 @@
   margin-bottom: rem(16);
 }
 
+.step-header {
+  padding: rem(16) 0;
+}
+
 .change-app-type-modal {
   .warning-banner {
     margin-top: rem(8);
