Feature/remove grpc app submit (#488)
use application submission instead of jsonb column
remap ui to use correct values for applicant info
fix documents for application submission on alcs side (temp solution for parcel till we get finalized document version)
unit tests

--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/application-details.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/application-details.component.html
@@ -1,5 +1,10 @@
 <section>
-  <app-parcel *ngIf="files && submittedApplication" [files]="files" [application]="submittedApplication"></app-parcel>
+  <app-parcel
+    *ngIf="files && submittedApplication"
+    [files]="files"
+    [application]="submittedApplication"
+    parcelType="application"
+  ></app-parcel>
 </section>
 <section>
   <app-parcel
@@ -117,13 +122,13 @@
 <section>
   <h3>Proposal</h3>
   <app-nfu-details
-    *ngIf="submittedApplication && application.type.code === 'NFUP'"
+    *ngIf="submittedApplication && applicationType === 'NFUP'"
     [application]="submittedApplication"
   ></app-nfu-details>
   <app-tur-details
-    *ngIf="submittedApplication && application.type.code === 'TURP'"
+    *ngIf="submittedApplication && applicationType === 'TURP'"
     [application]="submittedApplication"
-    [files]='files'
+    [files]="files"
   ></app-tur-details>
 </section>
 <section>
@@ -144,9 +149,7 @@
           <a (click)="openFile(file.uuid)">{{ file.fileName }}</a>
         </div>
       </ng-container>
-      <div *ngIf='otherFiles.length === 0' class='full-width'>
-        No optional attachments
-      </div>
+      <div *ngIf="otherFiles.length === 0" class="full-width">No optional attachments</div>
     </div>
   </div>
 </section>
