Refactor Document Type to Code Table

--- a/alcs-frontend/src/app/features/commissioner/commissioner.component.html
+++ b/alcs-frontend/src/app/features/commissioner/commissioner.component.html
@@ -5,7 +5,7 @@
       <app-document
         *ngIf="fileNumber"
         [fileNumber]="fileNumber"
-        [documentType]="DOCUMENT_TYPE.REVIEW_DOCUMENT"
+        [documentType]="DOCUMENT_TYPE.OTHER"
         title="Evidentiary Record"
         [readOnly]="true"
       ></app-document>
