--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/application-details.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/application-details.component.html
@@ -140,7 +140,7 @@
       <div class="grid-3 subheading2">File Name</div>
       <ng-container *ngFor="let file of otherFiles">
         <div class="grid-1">
-          {{ file.type }}
+          {{ file.type?.label }}
         </div>
         <div class="grid-2">
           {{ file.description }}
