--- a/portal-frontend/src/app/features/application-details/application-details.component.html
+++ b/portal-frontend/src/app/features/application-details/application-details.component.html
@@ -193,7 +193,7 @@
       <div class="grid-3 subheading2">File Name</div>
       <ng-container *ngFor="let file of otherFiles">
         <div class="grid-1">
-          {{ file.type }} <app-no-data [showRequired]="showErrors" *ngIf="!file.type"></app-no-data>
+          {{ file.type?.label }} <app-no-data [showRequired]="showErrors" *ngIf="!file.type"></app-no-data>
         </div>
         <div class="grid-2">
           {{ file.description }}
