--- a/alcs-frontend/src/app/features/application/intake/intake.component.scss
+++ b/alcs-frontend/src/app/features/application/intake/intake.component.scss
@@ -1,9 +1,17 @@
 .intake {
   & > div {
-    margin: 32px 0;
+    margin: 40px 0;
   }
 }
 
-.subheading2 {
+h5 {
   margin-bottom: 4px !important;
+}
+
+.payment-section {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin-top: 16px;
+  row-gap: 32px;
+  column-gap: 24px;
 }
